FACULDADE/ISEP/2_ANO/2_SEMESTRE/sem4pi-2024-2025-sem4pi_2024_2025_g13-1/base.integrations.plugins.dsl/src/main/java/drones/DronesParser.java
// Generated from C:/Users/Maria Póvoas/IdeaProjects/sem4pi-2024-2025-sem4pi_2024_2025_g13/base.integrations.plugins.dsl/src/main/java/drones/Drones.g4 by ANTLR 4.13.2
package drones;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DronesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, COORDENATES_LETTERS=5, TYPEDATA=6, TAKEOFF=7, 
		LAND=8, MOVE=9, MOVEPATH=10, HOOVER=11, LIGHTSON=12, LIGHTOFF=13, BLINK=14, 
		MOVECIRCLE=15, PI=16, EQUALS=17, SEMICOLON=18, LPAREN=19, RPAREN=20, COMMA=21, 
		DRONEONE=22, DRONETWO=23, PROGRAMMING=24, LANGUAGE=25, VERSION=26, TYPE=27, 
		POSITION=28, POINT=29, VECTOR=30, LINEARVELOCITY=31, ANGULARVELOCITY=32, 
		DISTANCE=33, TIME=34, VARIABLES=35, INSTRUCTIONS=36, UNIT=37, INT=38, 
		FLOAT=39, ID=40, NEWLINE=41, WS=42, UNKNOWN=43;
	public static final int
		RULE_program = 0, RULE_droneVersion = 1, RULE_infoDrone = 2, RULE_version = 3, 
		RULE_typesDroneOne = 4, RULE_typesDroneTwo = 5, RULE_position = 6, RULE_infoPositionPointVector = 7, 
		RULE_point = 8, RULE_vector = 9, RULE_linearvelocity = 10, RULE_angularvelocity = 11, 
		RULE_distance = 12, RULE_time = 13, RULE_coordinates = 14, RULE_number = 15, 
		RULE_variablesDroneOne = 16, RULE_infoVarDroneOne = 17, RULE_typeDroneOne = 18, 
		RULE_variablesDroneTwo = 19, RULE_infoVarDroneTwo = 20, RULE_typeDroneTwo = 21, 
		RULE_name = 22, RULE_value = 23, RULE_expression = 24, RULE_op = 25, RULE_array = 26, 
		RULE_instructionsDroneOne = 27, RULE_infoInstDroneOne = 28, RULE_instructionDroneOne = 29, 
		RULE_instructionsDroneTwo = 30, RULE_infoInstDroneTwo = 31, RULE_instructionDroneTwo = 32, 
		RULE_info = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "droneVersion", "infoDrone", "version", "typesDroneOne", "typesDroneTwo", 
			"position", "infoPositionPointVector", "point", "vector", "linearvelocity", 
			"angularvelocity", "distance", "time", "coordinates", "number", "variablesDroneOne", 
			"infoVarDroneOne", "typeDroneOne", "variablesDroneTwo", "infoVarDroneTwo", 
			"typeDroneTwo", "name", "value", "expression", "op", "array", "instructionsDroneOne", 
			"infoInstDroneOne", "instructionDroneOne", "instructionsDroneTwo", "infoInstDroneTwo", 
			"instructionDroneTwo", "info"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'-'", "'+'", "'*'", "'/'", "'(x, y, z)'", null, "'takeOff'", "'land'", 
			"'move'", "'movePath'", "'hoover'", "'lightsOn'", "'lightsOff'", "'blink'", 
			"'moveCircle'", "'PI'", "'='", "';'", "'('", "')'", "','", "'DroneOne'", 
			"'DroneTwo'", "'programming'", "'language'", "'version'", "'Types'", 
			"'Position'", "'Point'", "'Vector'", "'LinearVelocity'", "'AngularVelocity'", 
			"'Distance'", "'Time'", "'Variables'", "'Instructions'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "COORDENATES_LETTERS", "TYPEDATA", "TAKEOFF", 
			"LAND", "MOVE", "MOVEPATH", "HOOVER", "LIGHTSON", "LIGHTOFF", "BLINK", 
			"MOVECIRCLE", "PI", "EQUALS", "SEMICOLON", "LPAREN", "RPAREN", "COMMA", 
			"DRONEONE", "DRONETWO", "PROGRAMMING", "LANGUAGE", "VERSION", "TYPE", 
			"POSITION", "POINT", "VECTOR", "LINEARVELOCITY", "ANGULARVELOCITY", "DISTANCE", 
			"TIME", "VARIABLES", "INSTRUCTIONS", "UNIT", "INT", "FLOAT", "ID", "NEWLINE", 
			"WS", "UNKNOWN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Drones.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DronesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DroneVersionContext droneVersion() {
			return getRuleContext(DroneVersionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DronesParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			droneVersion();
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DroneVersionContext extends ParserRuleContext {
		public TerminalNode DRONEONE() { return getToken(DronesParser.DRONEONE, 0); }
		public InfoDroneContext infoDrone() {
			return getRuleContext(InfoDroneContext.class,0);
		}
		public TypesDroneOneContext typesDroneOne() {
			return getRuleContext(TypesDroneOneContext.class,0);
		}
		public VariablesDroneOneContext variablesDroneOne() {
			return getRuleContext(VariablesDroneOneContext.class,0);
		}
		public InstructionsDroneOneContext instructionsDroneOne() {
			return getRuleContext(InstructionsDroneOneContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(DronesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DronesParser.NEWLINE, i);
		}
		public TerminalNode DRONETWO() { return getToken(DronesParser.DRONETWO, 0); }
		public TypesDroneTwoContext typesDroneTwo() {
			return getRuleContext(TypesDroneTwoContext.class,0);
		}
		public VariablesDroneTwoContext variablesDroneTwo() {
			return getRuleContext(VariablesDroneTwoContext.class,0);
		}
		public InstructionsDroneTwoContext instructionsDroneTwo() {
			return getRuleContext(InstructionsDroneTwoContext.class,0);
		}
		public DroneVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_droneVersion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitDroneVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DroneVersionContext droneVersion() throws RecognitionException {
		DroneVersionContext _localctx = new DroneVersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_droneVersion);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DRONEONE:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(DRONEONE);
				setState(72);
				infoDrone();
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(73);
					match(NEWLINE);
					}
					}
					setState(76); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				setState(78);
				typesDroneOne();
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(79);
					match(NEWLINE);
					}
					}
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				setState(84);
				variablesDroneOne();
				setState(85);
				instructionsDroneOne();
				}
				break;
			case DRONETWO:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(DRONETWO);
				setState(88);
				infoDrone();
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(89);
					match(NEWLINE);
					}
					}
					setState(92); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				setState(94);
				typesDroneTwo();
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					match(NEWLINE);
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				setState(100);
				variablesDroneTwo();
				setState(101);
				instructionsDroneTwo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfoDroneContext extends ParserRuleContext {
		public List<TerminalNode> WS() { return getTokens(DronesParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DronesParser.WS, i);
		}
		public TerminalNode PROGRAMMING() { return getToken(DronesParser.PROGRAMMING, 0); }
		public TerminalNode LANGUAGE() { return getToken(DronesParser.LANGUAGE, 0); }
		public TerminalNode VERSION() { return getToken(DronesParser.VERSION, 0); }
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public InfoDroneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infoDrone; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitInfoDrone(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfoDroneContext infoDrone() throws RecognitionException {
		InfoDroneContext _localctx = new InfoDroneContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_infoDrone);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(WS);
			setState(106);
			match(PROGRAMMING);
			setState(107);
			match(WS);
			setState(108);
			match(LANGUAGE);
			setState(109);
			match(WS);
			setState(110);
			match(VERSION);
			setState(111);
			match(WS);
			setState(112);
			version();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(DronesParser.FLOAT, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypesDroneOneContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(DronesParser.TYPE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(DronesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DronesParser.NEWLINE, i);
		}
		public PositionContext position() {
			return getRuleContext(PositionContext.class,0);
		}
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public LinearvelocityContext linearvelocity() {
			return getRuleContext(LinearvelocityContext.class,0);
		}
		public AngularvelocityContext angularvelocity() {
			return getRuleContext(AngularvelocityContext.class,0);
		}
		public DistanceContext distance() {
			return getRuleContext(DistanceContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public TypesDroneOneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typesDroneOne; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitTypesDroneOne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypesDroneOneContext typesDroneOne() throws RecognitionException {
		TypesDroneOneContext _localctx = new TypesDroneOneContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typesDroneOne);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(TYPE);
			setState(118); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(117);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(120); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POSITION) {
				{
				setState(122);
				position();
				setState(124); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(123);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(126); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VECTOR) {
				{
				setState(130);
				vector();
				setState(132); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(131);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(134); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LINEARVELOCITY) {
				{
				setState(138);
				linearvelocity();
				setState(140); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(139);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(142); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ANGULARVELOCITY) {
				{
				setState(146);
				angularvelocity();
				setState(148); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(147);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(150); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTANCE) {
				{
				setState(154);
				distance();
				setState(156); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(155);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(158); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIME) {
				{
				setState(162);
				time();
				setState(164); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(163);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(166); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypesDroneTwoContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(DronesParser.TYPE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(DronesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DronesParser.NEWLINE, i);
		}
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public LinearvelocityContext linearvelocity() {
			return getRuleContext(LinearvelocityContext.class,0);
		}
		public AngularvelocityContext angularvelocity() {
			return getRuleContext(AngularvelocityContext.class,0);
		}
		public DistanceContext distance() {
			return getRuleContext(DistanceContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public TypesDroneTwoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typesDroneTwo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitTypesDroneTwo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypesDroneTwoContext typesDroneTwo() throws RecognitionException {
		TypesDroneTwoContext _localctx = new TypesDroneTwoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typesDroneTwo);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(TYPE);
			setState(172); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(171);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(174); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT) {
				{
				setState(176);
				point();
				setState(178); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(177);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(180); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VECTOR) {
				{
				setState(184);
				vector();
				setState(186); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(185);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(188); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LINEARVELOCITY) {
				{
				setState(192);
				linearvelocity();
				setState(194); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(193);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(196); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ANGULARVELOCITY) {
				{
				setState(200);
				angularvelocity();
				setState(202); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(201);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(204); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTANCE) {
				{
				setState(208);
				distance();
				setState(210); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(209);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(212); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,27,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(222);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIME) {
				{
				setState(216);
				time();
				setState(218); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(217);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(220); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,29,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PositionContext extends ParserRuleContext {
		public TerminalNode POSITION() { return getToken(DronesParser.POSITION, 0); }
		public List<TerminalNode> WS() { return getTokens(DronesParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DronesParser.WS, i);
		}
		public InfoPositionPointVectorContext infoPositionPointVector() {
			return getRuleContext(InfoPositionPointVectorContext.class,0);
		}
		public PositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_position; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DronesVisitor ) return ((DronesVisitor<? extends T>)visitor).visitPosition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PositionContext position() throws RecognitionException {
		PositionContext _localctx = new PositionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_position);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			match(POSITION);
			setState(225);
			match(WS);
			setState(226);
			match(T__0);
			setState(227);
			match(WS);
			setState(228);
			infoPositionPointVector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
